# osxinj_tut

./: CMakeLists.txt  LICENSE.md  Makefile  README.md  tutorial.md
src/osxinj/: injector.cpp  mach_inject.c  main.cpp
src/testapp/: main.cpp
src/testdylib/: mach_override.c  mach_override.h  main.cpp
src/testdylib/libudis86/: decode.c
